# travel-buddy

./: .gitignore  README.md
server/: .env  pyproject.toml
server/travel_assistant/: __init__.py  agent.py  prompt.py
server/travel_assistant/profiles/: itinerary_empty_default.json
server/travel_assistant/shared/: __init__.py  consts.py  types.py
server/travel_assistant/sub_agents/: __init__.py
server/travel_assistant/sub_agents/inspiration/: __init__.py  agent.py  prompt.py
server/travel_assistant/tools/: __init__.py  memory.py  places.py
